@@ -1,3 +1,10 @@
+Fri Dec 26 15:48:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/indexerconnection.py,xappy/searchconnection.py: Update to
+	  use the close() method on xapian databases, when this is finally
+	  implemented (it's just been added to xapian trunk, but not yet
+	  made its way into packages).
+
 Tue Dec 23 00:06:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/query_id.py,xappy/unittests/query_id_test.py:
